# nrf-rc-link

./: .gitignore  CMakeLists.txt  README.md  nrf_rc_link.c
drivers/: nrf24.c
drivers/include/: nrf24.h  nrf24_registers.h
include/: config.h  crc.h  driver.h  link.h  nrf24_config.h  nrf_rc.h  nrf_rc_driver.h  packet.h  protocol.h  rc_config.h
src/: crc.c  link.c  nrf_rc.c  nrf_rc_driver.c  packet.c
